2004-01-06  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: fix detection of Mr Project/Planner files
	(Closes: #130662)

2004-01-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: add an icon for the Matroska videos

2003-12-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: change the label of Matroska video file to
	Matroska video (thanks Menthos) (Closes: #130178)

2003-12-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Matroska support as application/x-matroska

2003-12-26  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added Verilog source files as text/x-verilog-src
	(Closes: #130021)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: update to 2.4.1

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: add more aliases for .zip files (Closes: #129510)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: application/x-flac is now audio/x-flac,
	image/svg is now image/svg+xml (Closes: #127667, #86748)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: better heuristics to detect RIFF CDXA video
	types (Closes: #129780)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: matching on "<title" brings too many false
	positive (HTML vs. XML) (Closes: #111234)

2003-12-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: run check-mime.pl, run check-mime.pl,
	whip self, whip self, add bittorrent mime-type

2003-12-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add DjVu support as image/x.djvu

2003-12-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add support for application/x-gchempaint and