@@ -1,3 +1,8 @@
+2004-02-05  Alexander Larsson  <alexl@redhat.com>
+
+	* gnome-vfs.keys.in:
+	Use nautilus-media oafid, not old music view one
+
 2004-01-06  Bastien Nocera  <hadess@hadess.net>
 
 	* gnome-vfs-mime-magic: fix detection of Mr Project/Planner files
